[package]
name = "aoc23_day01"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "digit_finder_strategies_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
